# parallax-compiler

./: .gitignore  CMakeLists.txt  README.md  fix_class_context.py
.github/workflows/: build.yml  integration-probe.yml  pstl-bench.yml
clang-plugin/: CMakeLists.txt
include/parallax/: class_context_extractor.hpp  execution_policy.hpp  execution_policy_impl.hpp  kernel_wrapper.hpp  lambda_compiler.hpp  lambda_extractor.hpp  lambda_ir_generator.hpp  spirv_generator.hpp
llvm-pass/: CMakeLists.txt
scripts/: parallax-cxx  pstl-bench-harness.md
src/: class_context_extractor.cpp  execution_policy.cpp  kernel_wrapper.cpp  lambda_compiler.cpp  lambda_extractor.cpp  lambda_ir_generator.cpp  spirv_generator.cpp
src/plugin/: CMakeLists.txt  ParallaxPlugin.cpp  ParallaxPlugin.h  ParallaxPluginV2.cpp  ParallaxRewriter.cpp  minimal_plx.cpp
tools/: CMakeLists.txt  parallax-rewrite.cpp  parallax-transform.cpp
